WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57099
Web Inspector: [Chromium] Clearing CPU profiles and heap snapshots doesn't release memory allocated for their native implementations
https://bugs.webkit.org/show_bug.cgi?id=57099
Summary
Web Inspector: [Chromium] Clearing CPU profiles and heap snapshots doesn't re...
Mikhail Naganov
Reported
2011-03-25 06:23:32 PDT
For heap snapshots this means that page retains sufficient amount of memory after snapshots were cleared on Inspector's UI.
Attachments
patch
(3.24 KB, patch)
2011-03-25 06:26 PDT
,
Mikhail Naganov
pfeldman
: review+
mnaganov
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mikhail Naganov
Comment 1
2011-03-25 06:26:28 PDT
Created
attachment 86929
[details]
patch
Mikhail Naganov
Comment 2
2011-03-28 05:26:36 PDT
Manually committed
http://trac.webkit.org/changeset/82108
2011-03-28 Mikhail Naganov <
mnaganov@chromium.org
> Reviewed by Pavel Feldman. WebInspector: [Chromium] Delete native CPU profiles and heap snapshots on binding disposal.
https://bugs.webkit.org/show_bug.cgi?id=57099
* bindings/v8/ScriptHeapSnapshot.cpp: (WebCore::ScriptHeapSnapshot::~ScriptHeapSnapshot): * bindings/v8/ScriptHeapSnapshot.h: * bindings/v8/ScriptProfile.cpp: (WebCore::ScriptProfile::~ScriptProfile): * bindings/v8/ScriptProfile.h: * inspector/InspectorProfilerAgent.cpp: (WebCore::InspectorProfilerAgent::resetState):
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug