Source/WebCore/bindings/v8/ScriptHeapSnapshot.h
@@ -54,7 +54,7 @@ public:
     {
         return adoptRef(new ScriptHeapSnapshot(snapshot));
     }
-    virtual ~ScriptHeapSnapshot() {}
+    virtual ~ScriptHeapSnapshot();
 
     String title() const;
     unsigned int uid() const;
